/*
 *  Olvid for Android
 *  Copyright Â© 2019-2022 Olvid SAS
 *
 *  This file is part of Olvid for Android.
 *
 *  Olvid is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU Affero General Public License, version 3,
 *  as published by the Free Software Foundation.
 *
 *  Olvid is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU Affero General Public License for more details.
 *
 *  You should have received a copy of the GNU Affero General Public license
 *  along with Olvid.  If not, see <https://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package olvid;

option java_package = "io.olvid.messenger.webclient.protobuf";

import "connection/ConnectionPing.proto";
import "requests/RequestDiscussions.proto";
import "requests/RequestThumbnail.proto";
import "requests/RequestMessage.proto";
import "requests/RequestUpdateMessage.proto";
import "requests/RequestMarkDiscussionAsRead.proto";
import "requests/RequestDownloadAttachment.proto";
import "requests/RequestAddReactionToMessage.proto";
import "notifications/NotifDiscussionUpdated.proto";
import "notifications/NotifNewMessage.proto";
import "notifications/NotifUpdateMessage.proto";
import "notifications/NotifDeleteMessage.proto";
import "notifications/NotifNewDraftAttachment.proto";
import "notifications/NotifNewAttachment.proto";
import 'notifications/NotifUpdateAttachment.proto';
import "notifications/NotifDeleteDraftAttachment.proto";
import "notifications/NotifNoDraftForDiscussion.proto";
import "notifications/NotifFileAlreadyExists.proto";
import "notifications/NotifUploadFile.proto";
import "notifications/NotifUploadResult.proto";
import "notifications/NotifDeleteAttachment.proto";
import "notifications/NotifDeleteDiscussion.proto";
import "notifications/NotifUpdateDraftAttachment.proto";
import "create/CreateMessage.proto";
import "create/CreateAttachment.proto";
import "requests/RequestSaveDraftMessage.proto";
import "requests/RequestDeleteDraftAttachment.proto";
import "requests/RequestDeleteDraftMessage.proto";
import "requests/RequestStopDraftAttachmentUpload.proto";
import "datatypes/Settings.proto";

enum ColissimoType {
	COLISSIMO_TYPE_DEFAULT = 0;

	CONNECTION_PING = 1;

    BYE = 2;

    SETTINGS = 3;

	// client to app messages 
	REQUEST_DISCUSSIONS = 20;
	REQUEST_DISCUSSIONS_RESPONSE = 21;
	REQUEST_MESSAGES = 22;
	REQUEST_MESSAGES_RESPONSE = 23;
	REQUEST_MARK_DISCUSSION_AS_READ = 24;
	REQUEST_UPDATE_MESSAGE = 25;
	REQUEST_ADD_REACTION_TO_MESSAGE = 26;

	NOTIF_DISCUSSION_UPDATED = 30;
	NOTIF_DISCUSSION_DELETED = 31;
	NOTIF_NEW_MESSAGE = 32;
    NOTIF_DELETE_MESSAGE = 33;
    NOTIF_NEW_DRAFT_ATTACHMENT = 34;
    NOTIF_NEW_ATTACHMENT = 35;
    NOTIF_DELETE_DRAFT_ATTACHMENT = 36;
    NOTIF_NO_DRAFT_FOR_DISCUSSION = 37;
    NOTIF_FILE_ALREADY_EXISTS = 38; //possible response to SEND_ATTACHMENT_NOTICE
    NOTIF_FILE_ALREADY_ATTACHED = 39; //possible response to SEND_ATTACHMENT_NOTICE
    NOTIF_UPLOAD_FILE = 40; //possible response to SEND_ATTACHMENT_NOTICE
    NOTIF_UPLOAD_RESULT = 41; //success or failure of upload for one file
    NOTIF_DELETE_DISCUSSION = 42;
    NOTIF_DELETE_ATTACHMENT = 43;
    NOTIF_UPDATE_MESSAGE = 44;
    NOTIF_UPDATE_ATTACHMENT = 45;
    NOTIF_UPDATE_DRAFT_ATTACHMENT=46;
    
	CREATE_MESSAGE = 47;
	NOTIF_MESSAGE_SENT = 48;
    
    REQUEST_THUMBNAIL = 50; //request image as thumbnail
    REQUEST_THUMBNAIL_RESPONSE = 52;
    
    SEND_ATTACHMENT_NOTICE = 60;
    SEND_ATTACHMENT_CHUNK = 61;
    SEND_ATTACHMENT_DONE = 62;
    
    REQUEST_SAVE_DRAFT_MESSAGE = 70;
    REQUEST_DELETE_DRAFT_ATTACHMENT = 71;
    REQUEST_DOWNLOAD_ATTACHMENT = 72;
    REQUEST_DELETE_DRAFT_MESSAGE = 73;
    REQUEST_STOP_DRAFT_ATTACHMENT_UPLOAD = 74;

    RECEIVE_DOWNLOAD_ATTACHMENT_CHUNK = 80;
    RECEIVE_DOWNLOAD_ATTACHMENT_DONE  = 81;
}

message Colissimo {
	ColissimoType type = 1;

	ConnectionPing connectionPing = 11;

	Settings settings = 12;
	
	RequestDiscussions requestDiscussions = 20;
	RequestDiscussionsResponse requestDiscussionsResponse = 21;
	RequestMessage requestMessage = 22;
	RequestMessageResponse requestMessageResponse = 23;
	RequestMarkDiscussionAsRead requestMarkDiscussionAsRead = 24;
	RequestUpdateMessage requestUpdateMessage = 25;
	RequestAddReactionToMessage requestAddReactionToMessage = 26;

	NotifDiscussionUpdated notifDiscussionUpdated = 40;
	NotifNewMessage notifNewMessage = 41;
    NotifDeleteMessage notifDeleteMessage = 42;
    NotifNewDraftAttachment notifNewDraftAttachment = 43;
    NotifNewAttachment notifNewAttachment = 44;
    NotifDeleteDraftAttachment notifDeleteDraftAttachment = 45;
    NotifNoDraftForDiscussion notifNoDraftForDiscussion = 46;
    NotifFileAlreadyExists notifFileAlreadyExists = 47;
    NotifFileAlreadyAttached notifFileAlreadyAttached = 48;
    NotifUploadFile notifUploadFile = 49;
    NotifUploadResult notifUploadResult = 50;
    NotifDeleteAttachment notifDeleteAttachment = 51;
    NotifDeleteDiscussion notifDeleteDiscussion = 52;
    NotifUpdateMessage notifUpdateMessage = 53;
    NotifUpdateAttachment notifUpdateAttachment = 54;
    NotifUpdateDraftAttachment notifUpdateDraftAttachment = 55;
    
	CreateMessage createMessage = 56;
	NotifMessageSent notifMessageSent = 57;
    
    RequestThumbnail requestThumbnail = 60;
    RequestThumbnailResponse requestThumbnailResponse = 62;
    
    SendAttachmentNotice sendAttachmentNotice = 70;
    SendAttachmentChunk sendAttachmentChunk = 71;
    SendAttachmentDone sendAttachmentDone = 72;
    
    
    RequestSaveDraftMessage requestSaveDraftMessage = 80;
    RequestDeleteDraftAttachment requestDeleteDraftAttachment = 81;
    RequestDownloadAttachment requestDownloadAttachment = 82;
    RequestDeleteDraftMessage requestDeleteDraftMessage = 83;
    RequestStopDraftAttachmentUpload requestStopDraftAttachmentUpload = 84;
    
    ReceiveDownloadAttachmentChunk receiveDownloadAttachmentChunk = 90;
    ReceiveDownloadAttachmentDone receiveDownloadAttachmentDone = 91;
    
}
