/*
 *  Olvid for Android
 *  Copyright Â© 2019-2022 Olvid SAS
 *
 *  This file is part of Olvid for Android.
 *
 *  Olvid is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU Affero General Public License, version 3,
 *  as published by the Free Software Foundation.
 *
 *  Olvid is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU Affero General Public License for more details.
 *
 *  You should have received a copy of the GNU Affero General Public License
 *  along with Olvid.  If not, see <https://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package olvid;

option java_package = "io.olvid.messenger.webclient.protobuf";


message RequestDownloadAttachment {
    int64 fyleId = 1;
    int64 size = 2;
}

//working with global fyleId, App has the fyle we're looking for
message ReceiveDownloadAttachmentChunk {
    int64 fyleId = 1;
    int64 chunkNumber = 3;
    bytes chunk = 4;
}

//can receive this with no chunks before if file doesn't exist or invalid path
message ReceiveDownloadAttachmentDone {
    int64 fyleId = 1;
    bool success = 2;
}